<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usedCars">

    <LinearLayout
        android:id="@+id/topTabs"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#005daa"
        android:weightSum="4"
        android:gravity="center_vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tabUsedCars"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/used_cars"
            android:textColor="#FFFFFF"
            app:cornerRadius="50dp"
            android:padding="1dp"
            app:backgroundTint="@android:color/transparent"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tabNewCars"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:padding="1dp"
            android:layout_weight="1"
            android:text="@string/new_cars"
            android:textColor="#FFFFFF"
            app:cornerRadius="50dp"
            app:backgroundTint="@android:color/transparent"
            app:strokeWidth="2dp"
            app:strokeColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tabBikes"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/bikes"
            android:textColor="#FFFFFF"
            app:cornerRadius="50dp"
            app:backgroundTint="@android:color/transparent"
            app:strokeWidth="2dp"
            app:strokeColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tabAutostore"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:text="@string/autostore"
            android:textColor="#FFFFFF"
            app:cornerRadius="50dp"
            app:backgroundTint="@android:color/transparent"
            app:strokeWidth="2dp"
            app:strokeColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#005DAA"
        android:padding="10dp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/topTabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/search_used_cars"
            android:background="@android:drawable/edit_text"
            android:padding="10dp" />

        <TextView
            android:text="@string/all_cities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/childFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
