<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newCars">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_new_cars_by_brand"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="4"
            android:padding="8dp"
            android:layout_marginBottom="20dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="4dp"/>

            <include
                layout="@layout/card_view"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_margin="4dp"/>

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popular_new_cars"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularCarsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="true"
            android:clipToPadding="false" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newly_launched_cars"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newly_launched_cars_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_comming_cars"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/up_comming_cars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"/>






    </LinearLayout>
</ScrollView>
